Password Manager should skip fields with credit card autocomplete attribute.

BUG=703491

Review-Url: https://codereview.chromium.org/2771833002
Cr-Commit-Position: refs/heads/master@{#459766}

Former-commit-id: b0bfdf4c71968db2620169a3e4056a4460beb00d