components/autofill/content/renderer/password_form_conversion_utils.h
@@ -64,6 +64,10 @@ std::unique_ptr<PasswordForm> CreatePasswordFormFromUnownedInputElements(
 bool HasAutocompleteAttributeValue(const blink::WebInputElement& element,
                                    const char* value_in_lowercase);
 
+// Checks in a case-insensitive way if credit card autocomplete attributes for
+// the given |element| are present.
+bool HasCreditCardAutocompleteAttributes(const blink::WebInputElement& element);
+
 }  // namespace autofill
 
 #endif  // COMPONENTS_AUTOFILL_CONTENT_RENDERER_PASSWORD_FORM_CONVERSION_UTILS_H__
